tests/NormalTests/paczka1/fuzzy1/25056827.err
Error in line 15: cn9zyt3rlv S664 31,1
Error in line 21: S664 S664 68,1
Error in line 25: S664 S820 69,6
Error in line 26: S664 A51 98,6
Error in line 13: 7Pxa4 S664 37,1
Error in line 39: 0rymRp S664 QQ,3
